tests/snapshots/run_wpt_conformance__trtx_quantizeLinear_float16_tensor_with_uint4_zeroPoint_which_has_odd_size.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
quantizeLinear.https.any.js quantizeLinear float16 tensor with uint4 zeroPoint which has odd size, trtx
 quantizeLinear :: quantizeLinear float16 tensor with uint4 zeroPoint which has odd size: index 1: actual=15 expected=12 tolerance=1
  inputs: quantizeLinearInput: [4.79296875, 2.794921875, 1.794921875, 0, 3.794921875]; quantizeLinearScale: [1.1201171875] (constant); quantizeLinearZeroPoint: [10] (constant)
  expected quantizeLinearOutput: [14, 12, 12, 10, 13]
  actual quantizeLinearOutput: [15, 15, 15, 0, 15]
  expected quantizeLinearOutput full nd:
(shape [5])
[14, 12, 12, 10, 13]
  actual quantizeLinearOutput full nd:
(shape [5])
[15, 15, 15, 0, 15]

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    quantizeLinearInput: f16[5];
  }

  consts {
    operand_1: f16[1] @bytes([123, 60]);
    operand_2: u4[1] @bytes([10]);
  }

  nodes {
    [quantizeLinearOutput] = quantizeLinear(quantizeLinearInput, operand_1, operand_2, label="");
  }

  outputs { quantizeLinearOutput; }
}
