tests/snapshots/run_wpt_conformance__trtx_quantizeLinear_float32_0D_constant_tensor_with_int8_0D_zeroPoint.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
quantizeLinear.https.any.js quantizeLinear float32 0D constant tensor with int8 0D zeroPoint, trtx
 quantizeLinear :: quantizeLinear float32 0D constant tensor with int8 0D zeroPoint: index 0: actual=0 expected=11 tolerance=1
  inputs: quantizeLinearInput: [10.794857501983644] (constant); quantizeLinearScale: [1.120274782180786] (constant); quantizeLinearZeroPoint: [1] (constant)
  expected quantizeLinearOutput: [11]
  actual quantizeLinearOutput: [0]

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: f32[] @bytes([189, 183, 44, 65]);
    operand_1: f32[] @bytes([42, 101, 143, 63]);
    operand_2: i8[] @bytes([1]);
  }

  nodes {
    [quantizeLinearOutput] = quantizeLinear(operand_0, operand_1, operand_2, label="");
  }

  outputs { quantizeLinearOutput; }
}
