tests/snapshots/run_wpt_conformance__trtx_quantizeLinear_float32_1D_constant_tensor_with_uint8_1D_zeroPoint.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, err)"
---
(
    "quantizeLinear.https.any.js",
    "quantizeLinear float32 1D constant tensor with uint8 1D zeroPoint",
    "trtx",
    Failed {
        msg: Some(
            "An error in the Trtx: Runtime error: setNamedWeights (with location) rejected\n\n--- built graph ---\nwebnn_graph \"graph\" v2 {\n  consts {\n    operand_0: u8[4] @bytes([128, 128, 128, 128]);\n    operand_1: f32[4] @bytes([146, 37, 35, 192, 121, 111, 153, 192, 45, 158, 6, 65, 216, 121, 195, 64]);\n    operand_2: f32[4] @bytes([79, 125, 21, 65, 43, 101, 143, 62, 41, 191, 147, 64, 42, 101, 143, 63]);\n  }\n\n  nodes {\n    [quantizeLinearOutput] = quantizeLinear(operand_1, operand_2, operand_0, label=\"\");\n  }\n\n  outputs { quantizeLinearOutput; }\n}\n",
        ),
    },
)
