tests/snapshots/run_wpt_conformance__trtx_quantizeLinear_float32_2D_tensor_broadcasting_zeroPoint_and_scale.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, err)"
---
(
    "quantizeLinear.https.any.js",
    "quantizeLinear float32 2D tensor broadcasting zeroPoint and scale",
    "trtx",
    Failed {
        msg: Some(
            "An error in the Trtx: Runtime error: setNamedWeights (with location) rejected\n\n--- built graph ---\nwebnn_graph \"graph\" v2 {\n  inputs {\n    quantizeLinearInput: f32[2, 2];\n  }\n\n  consts {\n    operand_1: f32[1, 1] @bytes([79, 125, 21, 65]);\n    operand_2: u8[1, 1] @bytes([128]);\n  }\n\n  nodes {\n    [quantizeLinearOutput] = quantizeLinear(quantizeLinearInput, operand_1, operand_2, label=\"\");\n  }\n\n  outputs { quantizeLinearOutput; }\n}\n",
        ),
    },
)
