tests/snapshots/run_wpt_conformance__trtx_quantizeLinear_float32_2D_tensor_with_int4_zeroPoint_which_has_even_size.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
quantizeLinear.https.any.js quantizeLinear float32 2D tensor with int4 zeroPoint which has even size, trtx
 quantizeLinear :: quantizeLinear float32 2D tensor with int4 zeroPoint which has even size: index 0: actual=7 expected=-2 tolerance=1
  inputs: quantizeLinearInput: [4.794857501983643, 3.23434354545, 2.794857501983643, 5.794857501983643, 0, 7.23434354545]; quantizeLinearScale: [1.120274782180786, 2.120274782180786] (constant); quantizeLinearZeroPoint: [-6, -5] (constant)
  expected quantizeLinearOutput: [-2, -3, -4, -2, -6, -2]
  actual quantizeLinearOutput: [7, 7, 7, 7, 0, 7]
  expected quantizeLinearOutput full nd:
(shape [3, 2])
  [-2, -3]
  [-4, -2]
  [-6, -2]
  actual quantizeLinearOutput full nd:
(shape [3, 2])
  [7, 7]
  [7, 7]
  [0, 7]

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    quantizeLinearInput: f32[3, 2];
  }

  consts {
    operand_1: f32[1, 2] @bytes([42, 101, 143, 63, 149, 178, 7, 64]);
    operand_2: i4[1, 2] @bytes([186]);
  }

  nodes {
    [quantizeLinearOutput] = quantizeLinear(quantizeLinearInput, operand_1, operand_2, label="");
  }

  outputs { quantizeLinearOutput; }
}
