tests/snapshots/run_wpt_conformance__trtx_quantizeLinear_float32_4D_tensor_broadcasting_scale_and_zeroPoint.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, err)"
---
(
    "quantizeLinear.https.any.js",
    "quantizeLinear float32 4D tensor broadcasting scale and zeroPoint",
    "trtx",
    Failed {
        msg: Some(
            "An error in the Trtx: Runtime error: setNamedWeights (with location) rejected\n\n--- built graph ---\nwebnn_graph \"graph\" v2 {\n  inputs {\n    quantizeLinearInput: f32[1, 1, 2, 2];\n  }\n\n  consts {\n    operand_0: u8[1, 1, 2, 1] @bytes([128, 128]);\n    operand_2: f32[1, 1, 2, 1] @bytes([43, 101, 143, 62, 41, 191, 147, 64]);\n  }\n\n  nodes {\n    [quantizeLinearOutput] = quantizeLinear(quantizeLinearInput, operand_2, operand_0, label=\"\");\n  }\n\n  outputs { quantizeLinearOutput; }\n}\n",
        ),
    },
)
