tests/snapshots/run_wpt_conformance__trtx_quantizeLinear_float32_tensor_with_int32_zeroPoint.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
quantizeLinear.https.any.js quantizeLinear float32 tensor with int32 zeroPoint, trtx
 quantizeLinear :: quantizeLinear float32 tensor with int32 zeroPoint: index 0: actual=-2147483648 expected=12345 tolerance=1
  inputs: quantizeLinearInput: [-22405.495643615723, 7391418.921366602]; quantizeLinearScale: [1.120274782180786, 0.2800687253475189] (constant); quantizeLinearZeroPoint: [32345, -2445234] (constant)
  expected quantizeLinearOutput: [12345, 23946213]
  actual quantizeLinearOutput: [-2147483648, 2147483647]
  expected quantizeLinearOutput full nd:
(shape [2])
[12345, 23946213]
  actual quantizeLinearOutput full nd:
(shape [2])
[-2147483648, 2147483647]

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    quantizeLinearInput: f32[2];
  }

  consts {
    operand_1: f32[2] @bytes([42, 101, 143, 63, 43, 101, 143, 62]);
    operand_2: i32[2] @bytes([89, 126, 0, 0, 78, 176, 218, 255]);
  }

  nodes {
    [quantizeLinearOutput] = quantizeLinear(quantizeLinearInput, operand_1, operand_2, label="");
  }

  outputs { quantizeLinearOutput; }
}
